# FTP

./: package-lock.json
local-stargate/: index.html  package-lock.json  package.json  tsconfig.json
local-stargate/src/: main.js  main.js.map  main.ts  style.css
local-stargate/src-tauri/: Cargo.toml  tauri.conf.json
local-stargate/src-tauri/src/: main.rs
